<resources>
    <string name="app_name">My Application</string>
    <string name="label">Hörmann Bisecure gateway</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="name">Name</string>
    <string name="enter_valid_information">Please Enter Valid Information</string>
    <string name="account_could_not_be_created">Account could not be registered, please try again.</string>
    <string name="user_id">User Id</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="prompt_host">host:port</string>
    <string name="welcome">welcome %1$s!</string>
    <string name="please_login">Please login to your gateway</string>
</resources>
